[gd_scene load_steps=7 format=3 uid="uid://cjkwsdkyksvs3"]

[ext_resource type="Script" path="res://assets/scripts/UI/inventory/inventory.gd" id="1_ula8m"]
[ext_resource type="Texture2D" uid="uid://bso14d0bn8kw1" path="res://assets/resources/UI/inventory/items/Sprite-0001.png" id="2_2ovt8"]

[sub_resource type="Animation" id="Animation_ciguq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8fihm"]
resource_name = "close"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"reset_data"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"check_window"
}]
}

[sub_resource type="Animation" id="Animation_b177g"]
resource_name = "open"
length = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"check_window"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_of6b4"]
_data = {
"RESET": SubResource("Animation_ciguq"),
"close": SubResource("Animation_8fihm"),
"open": SubResource("Animation_b177g")
}

[node name="Inventory" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ula8m")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -184.0
offset_right = 320.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
offset_left = 31.0
offset_top = 20.0
offset_right = 306.0
offset_bottom = 336.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -299.0
offset_top = -172.0
offset_right = 300.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemInfo" type="ScrollContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
size_flags_horizontal = 6
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/ItemInfo"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="ObjectSprite" type="TextureRect" parent="Panel/HBoxContainer/ItemInfo/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_2ovt8")

[node name="ObjectCaption" type="Label" parent="Panel/HBoxContainer/ItemInfo/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Object.name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ObjectDescription" type="Label" parent="Panel/HBoxContainer/ItemInfo/VBoxContainer"]
layout_mode = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
autowrap_mode = 3

[node name="Slots" type="ScrollContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 10

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/Slots"]
z_index = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
columns = 4

[node name="Panel2" type="Panel" parent="Panel/HBoxContainer/Slots"]
custom_minimum_size = Vector2(300, 344)
layout_mode = 2
mouse_filter = 2

[node name="StorageItemList" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.895833
anchor_right = 0.334375
anchor_bottom = 0.958333
offset_right = -59.0
text = "StorageItemList"
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = -200.0
offset_right = 337.0
offset_bottom = -168.0
text = "X"
metadata/_edit_use_anchors_ = true

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_of6b4")
}

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
